@@ -10,3 +10,4 @@ xml:
     icon.xml
     account.xml
     move.xml
+    payment.xml
