@@ -4,8 +4,6 @@ from .invoice import *
 from .party import *
 from .offered import *
 from .contract import *
-from .payment import *
-from .move import *
 
 
 def register():
@@ -34,10 +32,6 @@ def register():
         PostInvoiceContractBatch,
         PaymentTerm,
         PaymentTermLine,
-        PaymentCreationBatch,
-        PaymentTreatmentBatch,
-        Configuration,
-        MoveLine,
         SynthesisMenuInvoice,
         SynthesisMenu,
         module='contract_insurance_invoice', type_='model')
