@@ -1,7 +1,6 @@
 [tryton]
 depends:
     account
-    account_payment_cog
     account_invoice_cog
     party_cog
     contract
@@ -13,4 +12,3 @@ xml:
     invoice.xml
     contract.xml
     offered.xml
-    payment.xml
