@@ -1,2 +1,4 @@
+* Add payment creation and payment treatment batch
+
 Version 1.2 - 2014-07-01
 * Changelog file creation
